feat: payment integration with stripe
