# src/backend/open-api/models/model_payment_method.go
@@ -1,0 +1,67 @@
+/*
+ * Swagger - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Contact: nikita@ttnr.me
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+
+import (
+	"fmt"
+)
+
+
+// PaymentMethod : Unique identifier for the payment method
+type PaymentMethod string
+
+// List of PaymentMethod
+const (
+	CASH PaymentMethod = "cash"
+	STRIPE PaymentMethod = "stripe"
+)
+
+// AllowedPaymentMethodEnumValues is all the allowed values of PaymentMethod enum
+var AllowedPaymentMethodEnumValues = []PaymentMethod{
+	"cash",
+	"stripe",
+}
+
+// validPaymentMethodEnumValue provides a map of PaymentMethods for fast verification of use input
+var validPaymentMethodEnumValues = map[PaymentMethod]struct{}{
+	"cash": {},
+	"stripe": {},
+}
+
+// IsValid return true if the value is valid for the enum, false otherwise
+func (v PaymentMethod) IsValid() bool {
+	_, ok := validPaymentMethodEnumValues[v]
+	return ok
+}
+
+// NewPaymentMethodFromValue returns a pointer to a valid PaymentMethod
+// for the value passed as argument, or an error if the value passed is not allowed by the enum
+func NewPaymentMethodFromValue(v string) (PaymentMethod, error) {
+	ev := PaymentMethod(v)
+	if ev.IsValid() {
+		return ev, nil
+	} else {
+		return "", fmt.Errorf("invalid value '%v' for PaymentMethod: valid values are %v", v, AllowedPaymentMethodEnumValues)
+	}
+}
+
+
+
+// AssertPaymentMethodRequired checks if the required fields are not zero-ed
+func AssertPaymentMethodRequired(obj PaymentMethod) error {
+	return nil
+}
+
+// AssertPaymentMethodConstraints checks if the values respects the defined constraints
+func AssertPaymentMethodConstraints(obj PaymentMethod) error {
+	return nil
+}
